All Rest API routes added, Admin views added, Orders implementation added, some more security added to application-