@@ -1,6 +1,13 @@
 package com.store.backend.service.impl;
 
+import java.util.List;
+
+import org.springframework.beans.BeanUtils;
+import org.springframework.stereotype.Service;
+
+import com.store.backend.dto.OrderItemResponseDto;
 import com.store.backend.dto.OrderRequestDto;
+import com.store.backend.dto.OrderResponseDto;
 import com.store.backend.entity.Customer;
 import com.store.backend.entity.Order;
 import com.store.backend.entity.OrderItem;
@@ -10,12 +17,8 @@ import com.store.backend.repository.OrderRepository;
 import com.store.backend.repository.ProductRepository;
 import com.store.backend.service.OrderService;
 import com.store.backend.util.ApplicationConstants;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.BeanUtils;
-import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -46,8 +49,52 @@ public class OrderServiceImpl implements OrderService {
             orderItem.setQuantity(item.quantity());
             orderItem.setPrice(item.price());
             return orderItem;
-        }).collect(Collectors.toList());
+        }).toList();
         order.setOrderItems(orderItems);
         orderRepository.save(order);
     }
+
+    @Override
+    public List<OrderResponseDto> getCustomerOrders() {
+        Customer customer = profileService.getAuthenticatedCustomer();
+        List<Order> orders = orderRepository.findByCustomerOrderByCreatedAtDesc(customer);
+        return orders.stream().map(this::mapToOrderResponseDTO).toList();
+    }
+
+    @Override
+    public List<OrderResponseDto> getAllPendingOrders() {
+        List<Order> orders = orderRepository
+                .findByOrderStatus(ApplicationConstants.ORDER_STATUS_CREATED);
+        return orders.stream().map(this::mapToOrderResponseDTO).toList();
+    }
+
+    @Override
+    public Order updateOrderStatus(Long orderId, String orderStatus) {
+        Order order = orderRepository.findById(orderId).orElseThrow(
+                () -> new ResourceNotFoundException("Order", "OrderID", orderId.toString()));
+        order.setOrderStatus(orderStatus);
+        return orderRepository.save(order);
+    }
+
+    /** Map Order entity to OrderResponseDto **/
+    private OrderResponseDto mapToOrderResponseDTO(Order order) {
+        return new OrderResponseDto(
+            order.getOrderId(),
+            order.getOrderStatus(),
+            order.getTotalPrice(),
+            order.getCreatedAt().toString(),
+            order.getOrderItems().stream().map(this::mapToOrderItemResponseDTO).toList()
+        );
+    }
+
+    /** Map OrderItem entity to OrderItemResponseDto **/
+    private OrderItemResponseDto mapToOrderItemResponseDTO(OrderItem orderItem) {
+        return new OrderItemResponseDto(
+            orderItem.getProduct().getName(),
+            orderItem.getQuantity(),
+            orderItem.getPrice(),
+            orderItem.getProduct().getImageUrl()
+        );
+    }
+
 }
